--- a/css/style.css
+++ b/css/style.css
@@ -169,23 +169,10 @@ p{
 }
 
 .banner__wrapper{
-    /* display: grid;
-    grid-template-columns: 5fr 7fr; */
-    align-items: center;
+  align-items: center;
     display: flex;
     gap: 4rem;
 }
-
-@media (max-width: 998px){
-    .banner__wrapper{
-        flex-direction: column;
-    }
-    .banner__img img{
-        width: 100%;
-    }
-
-}
-
 
 .banner__content h1{
     font-size: clamp(3rem,5vw,5rem);
@@ -213,14 +200,20 @@ p{
     background-color: var(--black);
 }
 
-/* .banner__img{
-    display: block;
-    margin: auto;
+
+@media (max-width: 998px){
+    .banner__wrapper{
+        flex-direction: column;
+    }
+    .banner__img img{
+        width: 90%;
+        display: block;
+        margin: auto;
+    }
+
 }
 
-.banner__img img{
-    width: 100%;
-} */
+
 
 section.services{
     background-color: var(--black);
@@ -235,7 +228,7 @@ section.services{
 @media (max-width: 998px){
     .services__wrapper{
         display: block;
-        padding: 0 5rem;
+        padding: 0 2rem;
     }
     .services__wrapper .services__content{
         margin-bottom: 5rem;
@@ -281,13 +274,6 @@ section.aboutMe{
     padding: 6rem 0;
 }
 
-.aboutMe__img{
-    padding-right: 6rem;
-}
-
-.aboutMe__img img{
-    /* width: 100%; */
-}
 
 .aboutMe__wrapper{
     display: grid;
@@ -304,14 +290,22 @@ section.aboutMe{
     text-align: justify;
 }
 
+.aboutMe__wrapper img{
+    display: block;
+    width: 90%;
+    margin: auto;
+}
+
 @media (max-width: 998px){
     .aboutMe__wrapper{
         display: block;
     }
-    .banner__img img{
+    .aboutMe__img{
         display: block;
         margin-left: auto;
         margin-right: auto;
+        padding-right: 0;
+        margin-bottom: 2rem;
     }
 
 
