--- a/css/style.css
+++ b/css/style.css
@@ -718,15 +718,13 @@ section.updatesPage{
     margin-top: 3rem;
     display: grid;
     grid-template-columns: 2fr 1fr;
+    gap: 3rem;
 }
 
 .updatesPage__sidebar table tr td:nth-child(2){
     text-align: right;
 }
 
-.updatesPage__content{
-    padding-right: 2rem;
-}
 .updatesPage__content img{
     width: 100%;
 }
@@ -754,9 +752,15 @@ section.updatesPage{
     text-align: justify;
 }
 
-.updatesPage__content p.readMore{
-    margin-top: 1rem;
+.updatesPage__content a{
+    margin-top: 2rem;
     color: var(--primary);
+    display: block;
+    text-decoration: none;
+}
+
+.updatesPage__content a:hover{
+    color: var(--black);
 }
 
 hr{
@@ -765,9 +769,6 @@ hr{
     margin: 2rem 0 3rem 0;
 }
 
-.updatesPage__sidebar{
-    margin-left: 2rem;
-}
 
 .updatesPage__sidebar h3{
     color: var(--primary);
@@ -784,20 +785,25 @@ hr{
     font-size: 1rem;
 }
 
+/* another way for categories
+.sidebar__categories ul{
+    list-style-type: none;
+}
+
+.sidebar__categories ul li{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 1.5rem;
+} */
+
 .post__wrapper{
     display: flex;
     margin-top: 2rem;
+    gap: 1rem;
 }
 
-.post__details{
-    position: relative;
-    margin-left: 1rem;
-}
-
-.post__wrapper p{
-    position: absolute;
-    bottom: 5px;
-    font-size: .9rem;
+.post__wrapper h4{
+    margin-bottom: 1rem;
 }
 
 .tags__wrapper{
@@ -808,7 +814,7 @@ hr{
     display: inline-block;
     text-decoration: none;
     color: var(--black);
-    border: 3px solid var(--black);
+    border: 2px solid var(--black);
     padding: 1rem;
     border-radius: 2rem;
     margin: .5rem;
@@ -818,7 +824,7 @@ hr{
 
 .tags__wrapper a:hover{
     color: var(--white);
-    border: 3px solid var(--primary);
+    border: 2px solid var(--primary);
     background-color: var(--primary);
 }
 
@@ -833,13 +839,9 @@ hr{
     .updatesPage__wrapper{
         display: block;
     }
-    .updatesPage__sidebar{
-        margin: 3rem 0 0 0;
-    }
+
     .updatesPage__content ul{
         display: block;
     }
-    .updatesPage__content{
-        padding-right: 0;
-    }
+
 }
